Remove Acknowledgements section - no space, not important enough (it was general "thank you") for now.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8840 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -1072,11 +1072,11 @@ like \texttt{view3dscene}.
 %% You also have to use view3dscene from SVN or nightly builds,
 %% see \URL{http://michalis.ii.uni.wroc.pl/vrmlengine-snapshots/}.
 
-\section*{Acknowledgements}
+%% \section*{Acknowledgements}
 
-A lot of people helped and encouraged the development of our VRML/X3D engine,
-with it's rendering features and extensions. A big ,,thank you''
-goes to all of you.
+%% A lot of people helped and encouraged the development of our VRML/X3D engine,
+%% with it's rendering features and extensions. A big ,,thank you''
+%% goes to all of you.
 
 \bibliographystyle{eg-alpha}
 % \nocite{*}
