Shorten some "prev work" pararaphs, add Sh bib entry.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8847 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -75,11 +75,11 @@
   year = "2004"
 }
 
-%% misc{glsl,
-%%   title = "{OpenGL Shading Language}",
-%%   author = "{Khronos Group}",
-%%   howpublished = "\webLink{http://www.opengl.org/documentation/glsl/}"
-%% }
+@misc{glsl,
+  title = "{OpenGL Shading Language}",
+  author = "{Khronos Group}",
+  howpublished = "\webLink{http://www.opengl.org/documentation/glsl/}"
+}
 
 %% misc{cg,
 %%   title = "{Cg - The Language for High-Performance Realtime Graphics}",
