Remove "Independence from texture filtering" section, no space.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8849 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -437,7 +437,7 @@ the source code and uniform values specific to a given effect.
 \underline{Effect : X3DChildNode}
 \begin{Verbatim}[commandchars=\\\{\}]
 SFString [] \codeem{language} ""
-  # Language like "GLSL", "CG", or "HLSL".
+  # Language like "GLSL", "CG", "HLSL".
   # This effect will be used
   # only when the base renderer shader
   # uses the same language.
@@ -764,19 +764,19 @@ to the first \texttt{texture\_color} plug.
   \caption{ShaderTexture doing an edge detection operation on a normal ImageTexture.}
 \end{figure}
 
-\subsubsection{Independence from texture filtering}
+%% \subsubsection{Independence from texture filtering}
 
-Note that the shader effects for textures are calculated at each screen fragment
-(not at each texel). So your effects are not concerned about the texture size
-or texture filtering options. You just use the interpolated texture
-coordinates in the \texttt{texture\_color} plug.
+%% Note that the shader effects for textures are calculated at each screen fragment
+%% (not at each texel). So your effects are not concerned about the texture size
+%% or texture filtering options. You just use the interpolated texture
+%% coordinates in the \texttt{texture\_color} plug.
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=3in]{shader_texture_no_filtering_problems-cropped}
-  \caption{Yellowish arc is done by a texture effect, and so is not
-    affected by the pixelated look of the base image texture.}
-\end{figure}
+%% \begin{figure}[H]
+%%   \centering
+%%   \includegraphics[width=3in]{shader_texture_no_filtering_problems-cropped}
+%%   \caption{Yellowish arc is done by a texture effect, and so is not
+%%     affected by the pixelated look of the base image texture.}
+%% \end{figure}
 
 \section{Defining your own plug points}
 
