Various wording improvements. Avoid the word "Remember", suggesting a tutorial.
Shorten "invalid shader code" section.

Bib entry for NoiseTexture.

git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8854 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -93,8 +93,8 @@
 %%   howpublished = "\webLink{http://msdn.microsoft.com/en-us/library/bb509561\%28v=vs.85\%29.aspx}"
 %% }
 
-%% misc{instant:noisetex,
-%%   title = "{NoiseTexture}",
-%%   author = "{Instant Reality}",
-%%   howpublished = "\webLink{http://doc.instantreality.org/documentation/nodetype/NoiseTexture/}"
-%% }
+@misc{instant:noisetex,
+  title = "{NoiseTexture}",
+  author = "{Instant Reality}",
+  howpublished = "\webLink{http://doc.instantreality.org/documentation/nodetype/NoiseTexture/}"
+}
