Add shadowmaps bib reference, following reviewers suggestions.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8857 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -28,6 +28,24 @@
   keywords = {GPU, VRML, X3D, programmable shading, real-time shading, stream processors},
 }
 
+@inproceedings{vrmleng:shadowmaps,
+ author = {Kamburelis, Michalis},
+ title = "{Shadow maps and projective texturing in X3D}",
+ booktitle = {Proceedings of the 15th International Conference on Web 3D Technology},
+ series = {Web3D '10},
+ year = {2010},
+ isbn = {978-1-4503-0209-8},
+ location = {Los Angeles, California},
+ pages = {17--26},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1836049.1836052},
+ doi = {http://doi.acm.org/10.1145/1836049.1836052},
+ acmid = {1836052},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {X3D graphics, projective texturing, shadow maps, shadows},
+}
+
 %% misc{vrmleng:bumpmapping,
 %%   title = "{Bump mapping extensions}",
 %%   author = "Michalis Kamburelis",
