Add glsl citation.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8858 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -203,7 +203,7 @@ language in some cumbersome limitations.
 
 \section{Motivation and previous work}
 
-The popular real-time shading languages (OpenGL \texttt{GLSL}, NVidia \texttt{Cg}, Direct 3D \texttt{HLSL})
+The popular real-time shading languages (OpenGL \texttt{GLSL} \cite{glsl}, NVidia \texttt{Cg}, Direct 3D \texttt{HLSL})
 don't provide a ready solution for connecting shaders from independent sources.
 The \texttt{CgFX} and HLSL \texttt{.fx} files encapsulate shading language code
 in \emph{techniques} (for various graphic card capabilities),
