Add AnySL note.
Make sh bib entry as @book.

Add GLSL bib entry for book.

Make Verbatim font smaller.

git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8859 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -86,11 +86,18 @@
 %% http://www.amazon.com/Metaprogramming-GPUs-Sh-Stefanus-Toit/dp/1568812299
 %% http://books.google.com/books?id=8RX4RmFRLmgC&pg=PA79&lpg=PA79&dq=ShAttrib2f&source=bl&ots=IOxd1-BQLL&sig=AIPgFRmbodNpCLWmwk-QV5JUjVo&hl=pl&ei=EylRTe7RB8qeOsiQ1aQI&sa=X&oi=book_result&ct=result&resnum=7&ved=0CEkQ6AEwBg#v=onepage&q=ShAttrib2f&f=false
 
-@misc{sh:book,
+@book{sh:book,
   title = "{Metaprogramming GPUs with Sh}",
   author = "Stefanus Du Toit and Michael McCool",
   publisher = "A K Peters/CRC Press",
   year = "2004"
+}
+
+@book{glsl:book,
+  title = "{OpenGL Shading Language}",
+  author = "Randi J. Rost",
+  publisher = "Addison-Wesley",
+  year = 2004
 }
 
 @misc{glsl,
@@ -115,4 +122,19 @@
   title = "{NoiseTexture}",
   author = "{Instant Reality}",
   howpublished = "\webLink{http://doc.instantreality.org/documentation/nodetype/NoiseTexture/}"
+}
+
+@inproceedings{anysl,
+  author = {Karrenberg, Ralf and Rubinstein, Dmitri and Slusallek, Philipp and Hack, Sebastian},
+  title = "{AnySL: efficient and portable shading for ray tracing}",
+  booktitle = {Proceedings of the Conference on High Performance Graphics},
+  series = {HPG '10},
+  year = {2010},
+  location = {Saarbrucken, Germany},
+  pages = {97--105},
+  numpages = {9},
+  url = {http://portal.acm.org/citation.cfm?id=1921479.1921495},
+  acmid = {1921495},
+  publisher = {Eurographics Association},
+  address = {Aire-la-Ville, Switzerland, Switzerland},
 }
