Shorten example, otherwise it's too high and we have too much text.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8860 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -363,9 +363,7 @@ effects Effect \{
 \textbf{      const in vec3 normal)}
 \textbf{    \{}
 \textbf{      fragment_color.rgb *= 2.0;}
-\textbf{    \}}"
-  \}
-\}
+\textbf{    \}}" \} \}
 \end{Verbatim}
 
 This defines a GLSL function named \texttt{PLUG\_texture\_apply}
