--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -138,3 +138,4 @@
   publisher = {Eurographics Association},
   address = {Aire-la-Ville, Switzerland, Switzerland},
 }
+% see also http://www.cdl.uni-saarland.de/projects/anysl/
